--- a/Mission.WebUI/Views/Event/EventStatistics.cshtml
+++ b/Mission.WebUI/Views/Event/EventStatistics.cshtml
@@ -9,13 +9,13 @@
             'dataType': 'json',
             'success': function drawChart(x) {
                 var Categories = [['Age', 'Male score', 'Female score']];
-                var AgeScore;
-                var options = { title: 'Antal: ' + ' M = ' + x[0][2]["mCount"] + ' F = ' + x[0][3]["fCount"], hAxis: { title: '', titleTextStyle: { color: 'black'}} };
+                var AgeScore;              
                 for (var i in x[0]) {
                     AgeScore = [x[0][i]["AgeSpan"], x[0][i]["mScore"], x[0][i]["fScore"]];
                     Categories.push(AgeScore);
                 }
                 var data = google.visualization.arrayToDataTable(Categories);
+                var options = { title: 'Manliga röster : ' + x[0][2]["mCount"] + ' Kvinnliga röster : ' + x[0][2]["fCount"], hAxis: { title: '', titleTextStyle: { color: 'black'}} };
                 var chart = new google.visualization.ColumnChart(document.getElementById('chart_div')); chart.draw(data, options);
                 for (n = 1; n < x.length; n++) {
                     Categories = [['Age', 'Male score', 'Female score']];
@@ -25,8 +25,8 @@
                     }
                     $('.charts').append('<div class="questionDiv"><p>'+x[n][a]["Question"]+'</p><div class ="chartDiv" id="chart_div' + n + '" style=" height: 250px;"></div></div>');
                     data = google.visualization.arrayToDataTable(Categories);
-                    var options = { title: '', hAxis: { title: '', titleTextStyle: { color: 'black'}} };
-                    var charts = new google.visualization.ColumnChart(document.getElementById('chart_div' + n)); charts.draw(data, options);
+                    var options1 = { title: '', hAxis: { title: '', titleTextStyle: { color: 'black'}} };
+                    var charts = new google.visualization.ColumnChart(document.getElementById('chart_div' + n)); charts.draw(data, options1);
                 }
                
             }
