--- a/Mission.WebUI/Views/Shared/_Layout.cshtml
+++ b/Mission.WebUI/Views/Shared/_Layout.cshtml
@@ -113,7 +113,7 @@
                     <li>@Html.ActionLink("Föreläsningar", "Lectures", "Home")</li>            
                     <li>@Html.ActionLink("Nyheter", "Index", "Post")</li>
                     <li>@Html.ActionLink("Blogg", "Blog", "Post")</li>
-                    <li>@Html.ActionLink("Event", "index", "Event")</li>
+                    <!--<li>@Html.ActionLink("Event", "index", "Event")</li>-->
                     <li>@Html.ActionLink("On tour", "index", "Event")</li>
                     <li>@Html.ActionLink("Event", "OpenEvents", "Event")</li>
                 </ul>
