--- a/Mission.WebUI/Views/Home/Index.cshtml
+++ b/Mission.WebUI/Views/Home/Index.cshtml
@@ -127,11 +127,12 @@
 </div>
 </div>
 
+<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light+Two' rel='stylesheet' type='text/css'>
 <div id="social-box">
-<div class="social-fb"><img src="@Url.Content("~/Content/img/facebook.png")" /></div>
-<div class="social-fb"><img src="@Url.Content("~/Content/img/twitter.png")" /></div>
-<div class="social-fb"><img src="@Url.Content("~/Content/img/linked in.png")" /></div>
-<div class="social-fb"><img src="@Url.Content("~/Content/img/youtube.png")" /></div>
+<div class="social-fb"><img src="@Url.Content("~/Content/img/facebook104.png")" /> <span>Facebook</span></div>
+<div class="social-fb"><img src="@Url.Content("~/Content/img/twitter104.png")" /><span>Twitter</span></div>
+<div class="social-fb"><img src="@Url.Content("~/Content/img/linkedin104.png")" /><span>Linked-in</span></div>
+<div class="social-fb"><img src="@Url.Content("~/Content/img/youtube104.png")" /><span>Youtube</span></div>
 
 </div>
 </div>
