--- a/Mission.WebUI/Views/Post/Blog.cshtml
+++ b/Mission.WebUI/Views/Post/Blog.cshtml
@@ -4,9 +4,16 @@
 @{
     ViewBag.Title = "Blog";
 }
-<div id="posts-list">
+<div id="posts-list" class="post-lists-blogg">
     <h2 class="page-heading">
         <span>BLOGG</span></h2>
+        <div id="bloggarkiv">
+        <h2>Arkiv</h2>
+            @foreach(var arkiv in Model.ArkivCount)
+            {
+                <p>@Html.ActionLink(arkiv.Key, "Arkiv", "Post", new { month = arkiv.Key }, null) (@arkiv.Value)</p>
+            }
+        </div>
         @Html.DisplayFor(p => p.Posts)
 </div>
 
