--- a/Mission.WebUI/Views/Post/Search.cshtml
+++ b/Mission.WebUI/Views/Post/Search.cshtml
@@ -5,22 +5,14 @@
 }
 
 <div class="searchdiv">
-    <h2>Sökord: @ViewBag.SearchWord</h2>
-    
-    @if (@Model != null)
-    {
-        foreach (var searchObject in Model)
+    <h2>@ViewBag.StatusMessage</h2>
+    <div id="posts-list" class="post-list-partial">
+       @foreach (var searchObject in Model)
         {
-     
-         <article>
-          <a href="@searchObject.Url"> <h3>@searchObject.Title</h3> </a>
-       
-            <p>@searchObject.Excerpt</p>
-         </article>
+            <article class="format-standard" id="@searchObject.ID">
+	            <h2  class="post-heading"><a href="@searchObject.Url">@searchObject.Title</a></h2>
+	            <div class="excerpt">@MvcHtmlString.Create(@searchObject.Excerpt)</div>
+            </article>
         }
-    }
-    else
-    {
-        <p>Inga resultat hittades</p>
-    }
+</div>
 </div>
