--- a/Mission.WebUI/Content/css/style.css
+++ b/Mission.WebUI/Content/css/style.css
@@ -54,7 +54,7 @@ input[type="password"]:focus
     float: right;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    margin-top: 44px;
+    margin-top: 40px;
     clear: right;
 }
 
@@ -93,11 +93,23 @@ body{
 	font-size: 13px;
 }
 
-
+body strong 
+{
+font-weight: bold;
+padding: 10px;
+margin: 10px;
+font-style: italic;    
+}
 
 body p{
 	margin-bottom: 21px;
+	color:#555;
 }
+
+h4{padding-bottom: 10px !important; padding-top: 10px !important;}
+body li{color:#555;}
+
+ul {list-style-type:circle; }
 
 body a{
 	text-decoration: none;
@@ -398,7 +410,7 @@ nav a{
 
 .home-block-heading{
 	text-align: center;
-	margin-bottom: 40px;
+	margin-bottom: 20px;
 	background: url(../img/div-line.png) repeat-x center center;
 }
 
@@ -1334,19 +1346,20 @@ textarea
     width:100%;
 }
 
-#social-box img
+#social-box imged
 {
-    width:40%;
+    width:30%;
     float:left;
 }
 
 #social-box span
 {
-    margin-top:42px;
+    margin-top:28px;
     color:white;
     float:left;
     font-family: 'Shadows Into Light Two', cursive;
-    font-size:33px;
+    font-size:24px;
+    letter-spacing:0.1em;
 }
 
 #searchfield
@@ -1401,7 +1414,7 @@ textarea
     text-align:center;
 }
 
-#bloggarkiv p
+#bloggarkiv p a
 {
     color:white;
     margin-left:20px;
@@ -1410,4 +1423,27 @@ textarea
 .post-lists-blogg article
 {
 	width:67%;
+}
+
+.leftcol{float:left; width:49%; padding-top: 20px;}
+.rightcol{float:right; width:49%; padding-top: 20px;}
+
+/*-------RESPONSIVE-------*/
+/* EGEN FIL SEN */
+
+@media screen and (max-width: 450px) 
+{
+
+.jlogo {width:80px; height:80px;}
+#searchfield{width:100px;}
+#comboNav{margin-top:-14px;}
+.flexslider .slides img{}
+.one-third-thumbs figure, .one-fourth-thumbs figure{width:28% !important;}   
+}
+
+@media screen and (max-width: 767px) 
+{
+    .jlogo {width:80px; height:80px;}
+    #searchfield{width:100px;}
+    #comboNav{margin-top:-8px;}
 }
