--- a/Mission.WebUI/Views/Home/Index.cshtml
+++ b/Mission.WebUI/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using Mission.Domain.Entities
+﻿ @using Mission.Domain.Entities
 @using Mission.WebUI.ViewModels
 @model vm_PostSubscriber 
    
@@ -110,14 +110,17 @@
         {
             link = "Index";
         }
-        else { link = "blog"; };        
-        <article class="format-standard" id="@news.ID">
+        else { link = "blog"; };
+       
+            string title = news.Title.Replace(" ", "_");
+                
+        <article class="format-standard" id="@title">
             <div class="entry-date">
                 <div class="number">@news.Date.Day</div>
                 <div class="year">@news.Date.ToString("MMM"),@news.Date.Year</div>
             </div>
             <h2 class="post-heading post-h2">
-                   <a href="Post/@link#@news.ID">@news.Title</a>
+                   <a href="Post/@link#@title">@news.Title</a>
                 </h2>
             <div class="excerpt" id="news-@n">@MvcHtmlString.Create(@news.Body)</div>
           
