--- a/Mission.WebUI/Views/Event/YearsStatistics.cshtml
+++ b/Mission.WebUI/Views/Event/YearsStatistics.cshtml
@@ -3,9 +3,9 @@
 
 
 <div class="charts">
-    <div class="years" style="float: right; width: 30%; background-color: #555; border-radius: 1px; margin-top: 42px; ">
+    <div class="years" id="bloggarkiv" style="float: right; width: 30%; background-color: #555; border-radius: 1px; margin-top: 42px; ">
         @foreach (var x in Model) {             
-           <a onclick="getCharts(@x)">@x</a> <br />         
+           <p><a onclick="getCharts(@x)">@x</a></p>         
         }
     </div>
     <p>Statistik för hela året</p>
